Add auth and fixed the conflict between react and react native versions

--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^1.1.4",
+    "@types/react": "~18.2.79",
     "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
