--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^1.1.4",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.79",
     "expo": "~51.0.8",
+    "expo-auth-session": "^5.4.0",
+    "expo-secure-store": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
