--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --tunnel",
+    "start": "expo start --tunnel ",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -16,10 +16,14 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.79",
     "expo": "~51.0.8",
-    "expo-auth-session": "^5.4.0",
+    "expo-auth-session": "^5.5.2",
+    "expo-font": "~12.0.5",
     "expo-secure-store": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
+    "graphql": "^16.8.1",
+    "graphql-request": "^7.0.1",
+    "ra-data-graphql": "^4.16.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
